@@ -2,11 +2,12 @@ package com.tripsok_back.service;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.tripsok_back.dto.user.response.InterestThemeResponse;
-import com.tripsok_back.model.Theme.Theme;
+import com.tripsok_back.model.theme.Theme;
 import com.tripsok_back.model.user.InterestTheme;
 import com.tripsok_back.model.user.TripSokUser;
 import com.tripsok_back.repository.InterestThemeRepository;
@@ -25,9 +26,10 @@ public class InterestThemeService {
 
 	public void saveInterestThemes(TripSokUser user, List<Integer> interestThemeIds) {
 		if (interestThemeIds != null && !interestThemeIds.isEmpty()) {
-			List<Theme> interestThemes = themeRepository.findAllByIdIn(interestThemeIds);
+			List<Theme> interestThemes = themeRepository.findAllById(interestThemeIds);
 			List<InterestTheme> themesToSave = interestThemes.stream()
-				.map(theme -> new InterestTheme(user, theme)).toList();
+				.map(theme -> new InterestTheme(user, theme))
+				.collect(Collectors.toList());
 			interestThemeRepository.saveAll(themesToSave);
 		}
 	}
